# Coyote

./: .gitmodules  README.md
hw/: CMakeLists.txt  config.cmake  examples.cmake
hw/build_new/bitstreams/: cyt_top.ltx
hw/constraints/u55c/: u55c_placement.py  u55c_placement.xdc
hw/hdl/common/regs/: axis_reg.sv  axis_reg_array_profiler.sv  axisr_reg.sv  axisr_reg_array_profiler.sv  meta_reg.sv
hw/hdl/network/tcp/: tcp_tx_arbiter.sv
hw/hdl/operators/examples/bft/hdl/: bench_role.sv  bft_bcast.sv  bft_c0_0.svh  bft_coyote_bench_slave.sv  bft_ctrl_xbar.sv  bft_pkg.sv  bft_strm_arbiter.sv  host_intf_wrapper.sv  host_wrapper.sv  tcp_intf_wrapper.sv  tcp_wrapper.sv
hw/hdl/operators/examples/bft/hdl/bft_role/: bench_role.sv  (+4 more)
hw/hdl/operators/examples/bft/scripts/: ip_inst.tcl  local.xdc  tcp_intf_bd.tcl  utils.tcl
hw/hdl/operators/examples/dedup/: perf_dedup_c0_0.svh
hw/scripts/: config.tcl.in  example.tcl.in  shell.tcl.in
hw/scripts/bd/: cr_hbm_bpss.tcl
hw/scripts/ip_inst/: base_infrastructure.tcl
hw/scripts/wr_hdl/template_gen/: cyt_top_u55c.txt  dynamic_wrapper.txt  top_shell.txt  user_logic.txt  user_wrapper.txt
hw/scripts/wr_hdl/templates/: dynamic_wrapper.txt  lynx_pkg.txt  top_shell.txt  top_u55c.txt
sw/examples/bft/: README.md
sw/examples/bft/include/: bft.hpp  buf.hpp  cclo.hpp  common.hpp
sw/examples/bft/program_scripts/: flow_u55c.sh
sw/examples/bft/src/: bft.cpp  cclo.cpp
sw/examples/bft/test/: CMakeLists.txt  main.cpp
sw/examples/bft/test/run_scripts/: create_graphs.py  exp.sh  run.sh
sw/include/: cDefs.hpp
sw/src/: cProcess.cpp
(+195 files in other folders)
